--- a/index.html
+++ b/index.html
@@ -154,7 +154,6 @@
   </section>
 </div>
 
-
 <div class="card shadow-sm px-5">
   <div class="row g-0">
     <div class="col-md-4" data-aos="fade-up">
@@ -181,8 +180,6 @@
 </div>
 </div>
 </div>
-
-
 <footer class="footer" style="margin-top: 100px;">
   <div class="footer-wave"></div>
   <div class="container text-center text-md-start" style="margin-top: 90px;">
@@ -207,7 +204,7 @@
           </div>
 
           <!-- Product Links -->
-          <div class="col-md-3 mb-3 mt-4 ">
+          <div class="col-md-3 mb-3 mt-4 " style="color: #AA54A0;">
               <h5 class="text-uppercase">Courses</h5>
               <ul class="list-unstyled">
                   <li><a href="#" class="text-white text-decoration-none">Features</a></li>
@@ -217,7 +214,7 @@
 
           <!-- Contact Info -->
           <div class="col-md-3 mb-3 mt-4">
-              <h5 class="text-uppercase">Contact</h5>
+              <h5 class="text-uppercase"style="color: #AA54A0;">Contact</h5>
               <ul class="list-unstyled">
                   <li><a href="mailto:support@outreachplus.com" class="text-white text-decoration-none">support@QalinCodes.com</a></li>
                   <li>Company Registered in mogdishu, somalia</li>
@@ -233,8 +230,6 @@
       </div>
   </div>
 </footer>
-  
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
