--- a/index.html
+++ b/index.html
@@ -134,8 +134,9 @@
   </div>
 
 <div class="d-flex px-4" style="margin-top: 50px; margin-bottom: 40px;">
+  
   <div>
-    <img src="somali_girl-01.png"  style="background-size: cover; width:600px;"data-aos="fade-right"
+    <img src="sectionn-01.png"  style="background-size: cover; width:600px;"data-aos="fade-right"
     data-aos-offset="200"
     data-aos-easing="ease-in-sine">
   </div>
@@ -155,6 +156,8 @@
 </div>
 
 <div class="card shadow-sm px-5">
+  <div><h1 style="color: #fff; text-align: center; margin-top: 15px; font-size: 50px;">Featured Courses</h1></div>
+  <p style="color: #c0bebebd; text-align: center;  ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequun turamet consectetur adipisicing elit. Consequuntur<</p>
   <div class="row g-0">
     <div class="col-md-4" data-aos="fade-up">
       <img src="next-02.png" style="width: 550px; padding-top: 10px;">
@@ -218,7 +221,7 @@
               <ul class="list-unstyled">
                   <li><a href="mailto:support@outreachplus.com" class="text-white text-decoration-none">support@QalinCodes.com</a></li>
                   <li>Company Registered in mogdishu, somalia</li>
-                  <li>EU VAT: IE3428137BH</li>
+                  
               </ul>
           </div>
       </div>
