--- a/index.html
+++ b/index.html
@@ -86,7 +86,29 @@
             background-color: #AA54A0;
             border: none;
         }
+        .custom-section {
+          
+            color: white;
+            padding: 50px 20px;
+        }
 
+        .custom-section h1 {
+            font-size: 2.5rem;
+            font-weight: bold;
+        }
+
+        .custom-section p {
+            font-size: 1.1rem;
+        }
+
+        .illustration {
+            position: relative;
+        }
+
+        .illustration img {
+            max-width: 100%;
+            height: auto;
+        }
   </style>
 </head>
 <body>
@@ -100,6 +122,7 @@
       <div class="collapse navbar-collapse  mt-2 d-flex" style="padding-left: 300px ; color: #fff;" >
         <nav class="gap-4 d-flex" style="justify-content: space-between; margin-right: 310px;">
           <ul class="nav justify-content-center gap-4 fw-bold">
+
             <li class="nav-item">Courses</li>
             <li class="nav-item">Roadmaps</li>
             <li class="nav-item">Forum</li>
@@ -108,7 +131,7 @@
           </ul>
           
         </nav>
-        <div><a href="#" class="btn btn-primary ms-3 rounded-pill py-3 px-4" style="">Member Area</a></div>
+        <div><a href="#" class="btn btn-primary ms-3 rounded-pill py-3 px-4" style="margin-right: 5px;">Member Area</a></div>
       </div>
     </nav>
   </div>
@@ -154,6 +177,24 @@
     </div>
   </section>
 </div>
+<!--section 2-->
+<section class="custom-section">
+  <div class="container">
+      <div class="row align-items-center">
+          <div class="col-md-6 mb-4 mb-md-0" data-aos="fade-right">
+              <h1 style="padding-bottom: 20px;">You will get credits to exchange for courses and <span style="color: #AA54A0;">keep them forever.</span></h1>
+              <p>You will receive 12 annual credits that you can use to redeem for any Domestika course. Get access to courses that aren't included in the Plus catalog, or keep your favorite course forever.</p>
+          </div>
+          <div class="col-md-6 text-center illustration ml-5" style="width: 550px;" data-aos="fade-left">
+              <img src="remove (1).png" alt="Illustration">
+          </div>
+      </div>
+  </div>
+</section>
+
+
+<!--section 3-->
+<div>
 
 <div class="card shadow-sm px-5">
   <div><h1 style="color: #fff; text-align: center; margin-top: 15px; font-size: 50px;">Featured Courses</h1></div>
@@ -183,6 +224,8 @@
 </div>
 </div>
 </div>
+
+<!--footer-->
 <footer class="footer" style="margin-top: 100px;">
   <div class="footer-wave"></div>
   <div class="container text-center text-md-start" style="margin-top: 90px;">
