--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             ENG Abdirizak, Developer and Lead Instructor
           </p>
           <p class="text-[#AA54A0] font-bold mb-4">
-            4.7 <span class="text-white[#0F112B]">(348,483)</span>
+            4.7 <span class="text-white">(348,483)</span>
           </p>
           <p class="text-lg font-bold text-white">$15.99</p>
           <p class="text-sm text-gray-500 line-through text-white">$54.99</p>
@@ -123,7 +123,7 @@
             ENG Abdirizak, Developer and Lead Instructor
           </p>
           <p class="text-[#AA54A0] font-bold mb-4">
-            4.7 <span class="text-[#0F112B]">(348,483)</span>
+            4.7 <span class="text-white">(348,483)</span>
           </p>
           <p class="text-lg font-bold text-white">$13.99</p>
           <p class="text-sm text-gray-500 line-through text-white">$74.99</p>
@@ -197,16 +197,16 @@
         <div>
             <h3 class="text-lg font-semibold text-[#b34fa2]">USEFUL LINKS</h3>
             <ul class="mt-3 space-y-2">
-                <li><a href="#" class="text-gray-400 hover:text-white">Login</a></li>
-                <li><a href="#" class="text-gray-400 hover:text-white">Blog</a></li>
-                <li><a href="#" class="text-gray-400 hover:text-white">Contact Us</a></li>
+                <li><a href="login.html" class="text-gray-400 hover:text-white">Login</a></li>
+                <li><a href="index.html" class="text-gray-400 hover:text-white">courses</a></li>
+                <li><a href="contact.html" class="text-gray-400 hover:text-white">Contact Us</a></li>
             </ul>
         </div>
         <div>
             <h3 class="text-lg font-semibold text-[#b34fa2]">COURSES</h3>
             <ul class="mt-3 space-y-2">
                 <li><a href="#" class="text-gray-400 hover:text-white">Features</a></li>
-                <li><a href="#" class="text-gray-400 hover:text-white">Pricing</a></li>
+                <li><a href="#coursess" class="text-gray-400 hover:text-white">Pricing</a></li>
             </ul>
         </div>
         <div>
