--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
     <!-- Left Side -->
     <div class="flex flex-col items-center lg:items-start lg:w-1/2">
       <h1 class="text-3xl font-bold mb-4 text-center lg:text-left">
-        Simplify online interactions<br> between <span class="text-[#AA54A0]">Professors</span>and <span class="text-[#AA54A0]">Students</span>!
+        Simplify online interactions <br> between <span class="text-[#AA54A0]">Professors </span>and <span class="text-[#AA54A0]">Students</span>!
       </h1>
       <img src="login22.webp" alt="Illustration" class="w-full max-w-md rounded-lg" />
     </div>
@@ -69,16 +69,16 @@
         <div>
             <h3 class="text-lg font-semibold text-[#b34fa2]">USEFUL LINKS</h3>
             <ul class="mt-3 space-y-2">
-                <li><a href="#" class="text-gray-400 hover:text-white">Login</a></li>
-                <li><a href="#" class="text-gray-400 hover:text-white">Blog</a></li>
-                <li><a href="#" class="text-gray-400 hover:text-white">Contact Us</a></li>
+                <li><a href="login.html" class="text-gray-400 hover:text-white">Login</a></li>
+                <li><a href="index.html" class="text-gray-400 hover:text-white">courses</a></li>
+                <li><a href="contact.html" class="text-gray-400 hover:text-white">Contact Us</a></li>
             </ul>
         </div>
         <div>
             <h3 class="text-lg font-semibold text-[#b34fa2]">COURSES</h3>
             <ul class="mt-3 space-y-2">
                 <li><a href="#" class="text-gray-400 hover:text-white">Features</a></li>
-                <li><a href="#" class="text-gray-400 hover:text-white">Pricing</a></li>
+                <li><a href="#coursess" class="text-gray-400 hover:text-white">Pricing</a></li>
             </ul>
         </div>
         <div>
@@ -93,6 +93,7 @@
         <button class="mt-4 bg-[#b34fa2] text-white px-6 py-2 rounded-full text-lg hover:bg-[#963b85]">Enroll now</button>
     </div>
 </footer>
+
 
 
   <script>
