--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
       <li><a class="text-white hover:text-gray-300" href="index.html">Courses</a></li>
       <li><a class="text-white hover:text-gray-300" href="Roadmaps.html">Roadmaps</a></li>
       <li><a class="text-white hover:text-gray-300" href="forum.html">Forum</a></li>
-      <li><a class="text-[#AA54A0] hover:text-gray-300" href="contact.html">Contact Us</a></li>
+      <li><a class="rounded-full py-1 px-6 bg-[#AA54A0] text-white hover:bg-white hover:text-[#0F112B]" href="contact.html">Contact Us</a></li>
     </ul>
     <a href="login.html" class="btn btn-primary rounded-full py-3 px-6 bg-[#AA54A0] text-white mr-4">Sign Up</a>
   </nav>
