--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <nav class="flex items-center justify-between py-4 items-center">
     <img src="logo.png" class="ml-4 w-32 ">
     <ul class="flex space-x-8 font-normal text-2xl">
-      <li><a class="text-[#AA54A0] hover:text-gray-300" href="index.html">Courses</a></li>
+      <li><a class="rounded-full py-1 px-6 bg-[#AA54A0] text-white hover:bg-white hover:text-[#0F112B]" href="index.html">Courses</a></li>
       <li><a class="text-white hover:text-gray-300" href="Roadmaps.html">Roadmaps</a></li>
       <li><a class="text-white hover:text-gray-300" href="forum.html">Forum</a></li>
       <li><a class="text-white hover:text-gray-300" href="contact.html">Contact Us</a></li>
