--- a/Roadmaps.html
+++ b/Roadmaps.html
@@ -11,18 +11,126 @@
 </head>
 <body class="bg-[#0F112B] text-gray-400 font-sans">
   <!-- Navigation Bar -->
-  <nav class="flex items-center justify-between py-4 items-center">
-    <img src="logo.png" class="ml-4 w-32 ">
+  <nav class="flex items-center justify-between py-4 items-center ">
+    <img src="logo.png" class="ml-4 w-32">
     <ul class="flex space-x-8 font-normal text-2xl">
-      <li><a class="text-white hover:text-gray-300" href="index.html">Courses</a></li>
-      <li><a class="rounded-full py-1 px-6 bg-[#AA54A0] text-white hover:bg-white hover:text-[#0F112B]" href="Roadmaps.html">Roadmaps</a></li>
-      <li><a class="text-white hover:text-gray-300" href="forum.html">Forum</a></li>
-      <li><a class="text-white hover:text-gray-300" href="contact.html">Contact Us</a></li>
+      <li><a class="text-white hover:text-[#AA54A0]" href="index.html">Courses</a></li>
+      <li><a class="rounded-full py-1 px-6 - text-[#AA54A0] hover:text-[#AA54A0] " href="Roadmaps.html">Roadmaps</a></li>
+      <li><a class="text-white hover:text-[#AA54A0]" href="forum.html">Forum</a></li>
+      <li><a class="text-white hover:text-[#AA54A0]" href="contact.html">Contact Us</a></li>
     </ul>
     <a href="login.html" class="btn btn-primary rounded-full py-3 px-6 bg-[#AA54A0] text-white mr-4">Sign Up</a>
   </nav>
 
-
+  <!-- courses -->
+  <div class="py-8 px-4 mt-7" id="coursess">
+    <h2 class="text-4xl font-bold mb-6 text-white text-center"> Roadmaps</h2>
+    <p class="text-2xl font-normal mb-6 text-gray-300 text-center">Discover your optimal learning path to reach your full potential.</p>
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
+    
+     <!-- Card 1 -->
+     <div class=" rounded-lg shadow-lg overflow-hidden my-4 border border-white rounded-lg p-1 hover:scale-x-75 duration-700">
+      <img
+        class="w-full h-40 object-cover"
+        src="Fundamentals.png"
+        alt="Fundamentals"
+      />
+      <div class="p-4">
+        <h3 class="text-2xl font-semibold mb-2 text-white">
+          Fundamentals
+        </h3>
+        <p class="text-md text-gray-400 mb-2">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          Officia velit blanditiis nihil hic ea.
+          Lorem ipsum dolor sit amet, consectetur
+          adipisicing elit.
+          Officia velit blanditiis nihil hic ea.
+        </p>
+      </div>
+    </div>
+     <!-- Card 2 -->
+     <div class="rounded-lg shadow-lg overflow-hidden my-4 border border-white rounded-lg p-1 hover:scale-x-75 duration-700">
+      <img
+        class="w-full h-40 object-cover"
+        src="front-end.jpg"
+        alt="Python Course"
+      />
+      <div class="p-4">
+        <h3 class="text-2xl font-semibold mb-2 text-white">
+          Front-end Development
+        </h3>
+        <p class="text-md text-gray-400 mb-2">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          Officia velit blanditiis nihil hic ea.
+          Lorem ipsum dolor sit amet, consectetur
+          adipisicing elit.
+          Officia velit blanditiis nihil hic ea.
+        </p>
+      </div>
+    </div>
+     <!-- Card 3 -->
+     <div class=" rounded-lg shadow-lg overflow-hidden my-4 border border-white rounded-lg p-1 hover:scale-x-75 duration-700">
+      <img
+        class="w-full h-40 object-cover"
+        src="back end.png"
+        alt="Python Course"
+      />
+      <div class="p-4">
+        <h3 class="text-2xl font-semibold mb-2 text-white">
+          Back-end Development
+        </h3>
+        <p class="text-md text-gray-400 mb-2">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          Officia velit blanditiis nihil hic ea.
+          Lorem ipsum dolor sit amet, consectetur
+          adipisicing elit.
+          Officia velit blanditiis nihil hic ea.
+        </p>
+      </div>
+    </div>
+     <!-- Card 4-->
+     <div class=" rounded-2xl shadow-lg overflow-hidden my-4 border border-white rounded-lg p-1 hover:scale-x-75 duration-700">
+      <img
+        class="w-full h-40 object-cover"
+        src="mobile-app-developmen.jpeg"
+        alt="Python Course"
+      />
+      <div class="p-4">
+        <h3 class="text-2xl font-semibold mb-2 text-white">
+          Mobile Development
+        </h3>
+        <p class="text-md text-gray-400 mb-2">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          Officia velit blanditiis nihil hic ea.
+          Lorem ipsum dolor sit amet, consectetur
+          adipisicing elit.
+          Officia velit blanditiis nihil hic ea.
+        </p>
+      </div>
+    </div>
+     <!-- Card 5 -->
+     <div class=" rounded-lg shadow-lg overflow-hidden my-4 border border-white rounded-lg p-1 hover:scale-x-75 duration-700">
+      <img
+        class="w-full h-40 object-cover"
+        src="game.jpeg"
+        alt="Python Course"
+      />
+      <div class="p-4">
+        <h3 class="text-2xl font-semibold mb-2 text-white">
+          Game Development
+        </h3>
+        <p class="text-md text-gray-400 mb-2">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          Officia velit blanditiis nihil hic ea.
+          Lorem ipsum dolor sit amet, consectetur
+          adipisicing elit.
+          Officia velit blanditiis nihil hic ea.
+        </p>
+      </div>
+    </div>
+        </div>
+      </div>
+<!--sec2-->
 <section class="py-12 px-8">
   <div class="container mx-auto flex flex-wrap items-center">
     <div class="w-full md:w-1/2" data-aos="fade-right">
@@ -37,6 +145,12 @@
     </div>
   </div>
 </section>
+
+  
+      
+  
+
+ 
 
 
   <!-- Footer -->
