--- a/contact.html
+++ b/contact.html
@@ -73,41 +73,9 @@
 </div>
 
   <!-- Footer -->
-  <footer class="bg-[#0F112B] text-white py-7 relative">
-    <div class="absolute pb-[10px] top-2 left-[-2] w-full h-10 bg-gradient-to-r from-[#b34fa2] to-transparent"></div>
-
-    <div class="max-w-7xl mx-auto px-6 grid grid-cols-1 md:grid-cols-4 gap-8 mt-[30px]">
-        <div>
-            <h2 class="text-3xl font-bold text-[#b34fa2] flex items-center">
-                <span class="text-4xl">Q</span>alin <span class="ml-1">Codes</span>
-            </h2>
-            <p class="mt-4 text-gray-400">Qalin Codes is your gateway to mastering programming skills through comprehensive and interactive online courses.</p>
-        </div>
-        <div>
-            <h3 class="text-lg font-semibold text-[#b34fa2]">USEFUL LINKS</h3>
-            <ul class="mt-3 space-y-2">
-                <li><a href="login.html" class="text-gray-400 hover:text-white">Login</a></li>
-                <li><a href="index.html" class="text-gray-400 hover:text-white">courses</a></li>
-                <li><a href="contact.html" class="text-gray-400 hover:text-white">Contact Us</a></li>
-            </ul>
-        </div>
-        <div>
-            <h3 class="text-lg font-semibold text-[#b34fa2]">COURSES</h3>
-            <ul class="mt-3 space-y-2">
-                <li><a href="#" class="text-gray-400 hover:text-white">Features</a></li>
-                <li><a href="#coursess" class="text-gray-400 hover:text-white">Pricing</a></li>
-            </ul>
-        </div>
-        <div>
-            <h3 class="text-lg font-semibold text-[#b34fa2]">CONTACT</h3>
-            <p class="mt-3 text-gray-400">support@QalinCodes.com</p>
-            <p class="text-gray-400">Company Registered in Mogadishu, Somalia</p>
-        </div>
-    </div>
-    <div class="absolute top-0 left-0 w-full h-2 bg-gradient-to-r from-[#b34fa2] to-transparent"></div>
-    <div class="text-center text-gray-400 mt-10 border-t border-gray-700 pt-5">
+<footer>
+    <div class="text-center text-gray-400 mt-10 border-t border-gray-700 pt-5 pb-10">
         <p>&copy; 2025 QalinCodes.com - <a href="#" class="text-[#b34fa2] hover:underline">Privacy</a> | <a href="#" class="text-[#b34fa2] hover:underline">Terms of Service</a></p>
-        <button class="mt-4 bg-[#b34fa2] text-white px-6 py-2 rounded-full text-lg hover:bg-[#963b85]">Enroll now</button>
     </div>
 </footer>
 
