--- a/forum.html
+++ b/forum.html
@@ -14,58 +14,65 @@
   <nav class="flex items-center justify-between py-4 items-center">
     <img src="logo.png" class="ml-4 w-32 ">
     <ul class="flex space-x-8 font-normal text-2xl">
-      <li><a class="text-white hover:text-gray-300" href="index.html">Courses</a></li>
-      <li><a class="text-white hover:text-gray-300" href="Roadmaps.html">Roadmaps</a></li>
-      <li><a class="rounded-full py-1 px-6 bg-[#AA54A0] text-white hover:bg-white hover:text-[#0F112B]" href="forum.html">Forum</a></li>
-      <li><a class="text-white hover:text-gray-300" href="contact.html">Contact Us</a></li>
+      <li><a class="text-white hover:text-[#AA54A0]" href="index.html">Courses</a></li>
+      <li><a class="text-white hover:text-[#AA54A0]" href="Roadmaps.html">Roadmaps</a></li>
+      <li><a class="rounded-full py-1 px-6 hover:text-white text-[#AA54A0]" href="forum.html">Forum</a></li>
+      <li><a class="text-white hover:text-[#AA54A0]" href="contact.html">Contact Us</a></li>
     </ul>
     <a href="login.html" class="btn btn-primary rounded-full py-3 px-6 bg-[#AA54A0] text-white mr-4">Sign Up</a>
   </nav>
 
 
 
+  <main class="container mx-auto px-4 py-6">
+    <section class=" shadow rounded-lg p-6">
+        <h2 class="text-3xl font-semibold mb-4">Discussion Forum</h2>
+        <p class="text-gray-600 mb-6">Engage with the community, ask questions, and share your knowledge!</p>
 
+        <div class="mb-4">
+            <input 
+                type="text" 
+                placeholder="Search topics..." 
+                class="w-full rounded-lg p-2 focus:outline-none focus:ring focus:ring-blue-300">
+        </div>
 
-  <!-- Footer -->
-  <footer class="bg-[#0F112B] text-white py-7 relative">
-    <div class="absolute pb-[10px] top-2 left-[-2] w-full h-10 bg-gradient-to-r from-[#b34fa2] to-transparent"></div>
+        <div class="space-y-4">
+            <!-- Forum Topic 1 -->
+            <div class="bg-gray-50 p-4 rounded-lg shadow hover:shadow-lg">
+                <h3 class="text-lg font-medium text-[#AA54A0]">How to set up a React project?</h3>
+                <p class="text-gray-700">Posted by <span class="font-semibold">JohnDoe</span> on Jan 25, 2025</p>
+                <button class="mt-2 text-[#AA54A0] hover:underline">Read more</button>
+            </div>
 
-    <div class="max-w-7xl mx-auto px-6 grid grid-cols-1 md:grid-cols-4 gap-8 mt-[30px]">
-        <div>
-            <h2 class="text-3xl font-bold text-[#b34fa2] flex items-center">
-                <span class="text-4xl">Q</span>alin <span class="ml-1">Codes</span>
-            </h2>
-            <p class="mt-4 text-gray-400">Qalin Codes is your gateway to mastering programming skills through comprehensive and interactive online courses.</p>
+            <!-- Forum Topic 2 -->
+            <div class="bg-gray-50 p-4 rounded-lg shadow hover:shadow-lg">
+                <h3 class="text-lg font-medium text-[#AA54A0]">Best practices for using Tailwind CSS</h3>
+                <p class="text-gray-700">Posted by <span class="font-semibold">JaneSmith</span> on Jan 22, 2025</p>
+                <button class="mt-2 text-[#AA54A0] hover:underline">Read more</button>
+            </div>
+
+            <!-- Forum Topic 3 -->
+            <div class="bg-gray-50 p-4 rounded-lg shadow hover:shadow-lg">
+                <h3 class="text-lg font-medium text-[#AA54A0]">Node.js: How to handle async requests?</h3>
+                <p class="text-gray-700">Posted by <span class="font-semibold">DevGuru</span> on Jan 20, 2025</p>
+                <button class="mt-2 text-[#AA54A0] hover:underline">Read more</button>
+            </div>
         </div>
-        <div>
-            <h3 class="text-lg font-semibold text-[#b34fa2]">USEFUL LINKS</h3>
-            <ul class="mt-3 space-y-2">
-                <li><a href="login.html" class="text-gray-400 hover:text-white">Login</a></li>
-                <li><a href="index.html" class="text-gray-400 hover:text-white">courses</a></li>
-                <li><a href="contact.html" class="text-gray-400 hover:text-white">Contact Us</a></li>
-            </ul>
-        </div>
-        <div>
-            <h3 class="text-lg font-semibold text-[#b34fa2]">COURSES</h3>
-            <ul class="mt-3 space-y-2">
-                <li><a href="#" class="text-gray-400 hover:text-white">Features</a></li>
-                <li><a href="#coursess" class="text-gray-400 hover:text-white">Pricing</a></li>
-            </ul>
-        </div>
-        <div>
-            <h3 class="text-lg font-semibold text-[#b34fa2]">CONTACT</h3>
-            <p class="mt-3 text-gray-400">support@QalinCodes.com</p>
-            <p class="text-gray-400">Company Registered in Mogadishu, Somalia</p>
-        </div>
+    </section>
+
+    <div class="mt-6">
+        <button 
+            class="bg-[#AA54A0] text-white px-6 py-2 rounded-lg shadow hover:bg-white hover:text-[#AA54A0] ml-4">
+            Create New Topic
+        </button>
     </div>
-    <div class="absolute top-0 left-0 w-full h-2 bg-gradient-to-r from-[#b34fa2] to-transparent"></div>
-    <div class="text-center text-gray-400 mt-10 border-t border-gray-700 pt-5">
+</main>
+  <!-- Footer -->
+  <footer>
+    <div class="text-center text-gray-400 mt-10 border-t border-gray-700 pt-5 pb-10">
         <p>&copy; 2025 QalinCodes.com - <a href="#" class="text-[#b34fa2] hover:underline">Privacy</a> | <a href="#" class="text-[#b34fa2] hover:underline">Terms of Service</a></p>
-        <button class="mt-4 bg-[#b34fa2] text-white px-6 py-2 rounded-full text-lg hover:bg-[#963b85]">Enroll now</button>
     </div>
 </footer>
-
-
 
   <script>
     AOS.init();
