--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <nav class="flex items-center justify-between py-4 items-center">
     <img src="logo.png" class="ml-4 w-32 ">
     <ul class="flex space-x-8 font-normal text-2xl">
-      <li><a class="rounded-full py-1 px-6 bg-[#AA54A0] text-white hover:bg-white hover:text-[#0F112B]" href="index.html">Courses</a></li>
-      <li><a class="text-white hover:text-gray-300" href="Roadmaps.html">Roadmaps</a></li>
-      <li><a class="text-white hover:text-gray-300" href="forum.html">Forum</a></li>
-      <li><a class="text-white hover:text-gray-300" href="contact.html">Contact Us</a></li>
+      <li><a class="rounded-full py-1 px-6 hover:text-white text-[#AA54A0]" href="index.html">Courses</a></li>
+      <li><a class="text-white hover:text-[#AA54A0]" href="Roadmaps.html">Roadmaps</a></li>
+      <li><a class="text-white hover:text-[#AA54A0]" href="forum.html">Forum</a></li>
+      <li><a class="text-white hover:text-[#AA54A0]" href="contact.html">Contact Us</a></li>
     </ul>
     <a href="login.html" class="btn btn-primary rounded-full py-3 px-6 bg-[#AA54A0] text-white mr-4">Sign Up</a>
   </nav>
