--- a/Roadmaps.html
+++ b/Roadmaps.html
@@ -29,7 +29,7 @@
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
     
      <!-- Card 1 -->
-     <div class=" rounded-lg shadow-lg overflow-hidden my-4 border border-white rounded-lg p-1 hover:scale-x-75 duration-700">
+     <div class=" rounded-lg shadow-lg overflow-hidden my-4 border border-white rounded-lg p-1">
       <img
         class="w-full h-40 object-cover"
         src="Fundamentals.png"
@@ -49,7 +49,7 @@
       </div>
     </div>
      <!-- Card 2 -->
-     <div class="rounded-lg shadow-lg overflow-hidden my-4 border border-white rounded-lg p-1 hover:scale-x-75 duration-700">
+     <div class="rounded-lg shadow-lg overflow-hidden my-4 border border-white rounded-lg p-1">
       <img
         class="w-full h-40 object-cover"
         src="front-end.jpg"
@@ -69,7 +69,7 @@
       </div>
     </div>
      <!-- Card 3 -->
-     <div class=" rounded-lg shadow-lg overflow-hidden my-4 border border-white rounded-lg p-1 hover:scale-x-75 duration-700">
+     <div class=" rounded-lg shadow-lg overflow-hidden my-4 border border-white rounded-lg p-1">
       <img
         class="w-full h-40 object-cover"
         src="back end.png"
@@ -89,7 +89,7 @@
       </div>
     </div>
      <!-- Card 4-->
-     <div class=" rounded-2xl shadow-lg overflow-hidden my-4 border border-white rounded-lg p-1 hover:scale-x-75 duration-700">
+     <div class=" rounded-2xl shadow-lg overflow-hidden my-4 border border-white rounded-lg p-1">
       <img
         class="w-full h-40 object-cover"
         src="mobile-app-developmen.jpeg"
@@ -109,7 +109,7 @@
       </div>
     </div>
      <!-- Card 5 -->
-     <div class=" rounded-lg shadow-lg overflow-hidden my-4 border border-white rounded-lg p-1 hover:scale-x-75 duration-700">
+     <div class=" rounded-lg shadow-lg overflow-hidden my-4 border border-white rounded-lg p-1">
       <img
         class="w-full h-40 object-cover"
         src="game.jpeg"
