--- a/contact.html
+++ b/contact.html
@@ -11,30 +11,51 @@
  
 </head>
 <body class="bg-[#0F112B] text-gray-400 font-sans">
-  <!-- Navigation Bar -->
-  <nav class="flex items-center justify-between py-4 items-center">
-    <img src="logo.png" class="ml-4 w-32 ">
-    <ul class="flex space-x-8 font-normal text-2xl">
-      <li><a class="text-white hover:text-gray-300" href="index.html">Courses</a></li>
-      <li><a class="text-white hover:text-gray-300" href="Roadmaps.html">Roadmaps</a></li>
-      <li><a class="text-white hover:text-gray-300" href="forum.html">Forum</a></li>
-      <li><a class="rounded-full py-1 px-6 bg-[#AA54A0] text-white hover:bg-white hover:text-[#0F112B]" href="contact.html">Contact Us</a></li>
-    </ul>
-    <a href="login.html" class="btn btn-primary rounded-full py-3 px-6 bg-[#AA54A0] text-white mr-4">Sign Up</a>
-  </nav>
+ <!-- Navigation Bar -->
+<nav class="flex flex-wrap items-center justify-between py-4 px-4 md:px-8">
+  <img src="logo.png" class="w-24 md:w-32" alt="Logo">
+
+  <!-- Hamburger Button -->
+  <label for="menu-toggle" class="md:hidden cursor-pointer">
+    <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-[#AA54A0]" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
+    </svg>
+  </label>
+  
+  <!-- Hidden Checkbox for Toggle -->
+  <input type="checkbox" id="menu-toggle" class="hidden peer">
+
+  <!-- Navigation Links -->
+  <ul 
+    class="hidden peer-checked:flex flex-col md:flex md:flex-row md:space-x-6 lg:space-x-8 font-medium text-lg lg:text-2xl w-full md:w-auto md:items-center mt-4 md:mt-0"
+  >
+    <li><a class="text-white hover:text-[#AA54A0]" href="index.html">Courses</a></li>
+    <li><a class="text-white hover:text-[#AA54A0]" href="Roadmaps.html">Roadmaps</a></li>
+    <li><a class="text-white hover:text-[#AA54A0]" href="forum.html">Forum</a></li>
+    <li><a class="rounded-full py-1 px-4 md:px-6 hover:text-white text-[#AA54A0]" href="contact.html">Contact Us</a></li>
+  </ul>
+
+  <a 
+    href="login.html" 
+    class="btn btn-primary rounded-full py-2 md:py-3 px-5 md:px-6 bg-[#AA54A0] text-white"
+  >
+    Sign Up
+  </a>
+</nav>
+
   <!--hero-->
-  <div class="flex flex-wrap items-center mt-2 px-10 text-center">
+  <div class="flex flex-wrap items-center mt-2 px-10 text-center lg:text-left">
     <div class="w-full md:w-1/2 mb-8 md:mb-0">
-      <h1 class=" text-[80px] font-light text-white">
+      <h1 class="text-5xl lg:text-[80px] font-light text-white">
         <span class="text-[#AA54A0] font-normal ">We're </span> <span class=" ">Here <br>To  </span> <span class="text-[#AA54A0] font-normal ">Help</span>
       </h1>
-      <p class="">Unlock your potential with personalized mentorship and hands-on learning &mdash; empowering you to succeed in the digital world.</p>
+      <p class="lg:pt-8">Unlock your potential with personalized mentorship and hands-on learning &mdash; empowering you to succeed in the digital world.</p>
       <div class="mt-7 ">
-        <a href="#cont" class="btn bg-[#AA54A0] text-white py-2 px-10 rounded-full text-2xl">contact us</a>
-        <a href="login.html" class="btn border border-white text-white py-2 px-10 rounded-full text-2xl ml-5">sign up</a>
+        <a href="#cont" class="btn bg-[#AA54A0] text-white py-1 px-5 lg:py-2 lg:px-10 rounded-full text-2xl">contact us</a>
+        <a href="login.html" class="btn border border-white text-white py-1 px-5 lg:py-2 lg:px-10 rounded-full text-2xl ml-5">sign up</a>
       </div>
     </div>
-    <img  src="con page.png" class="mx-auto w-[400px]">
+    <img  src="con page.png" class="mx-auto w-[300px] lg:w-[400px]">
   </div>
 <!--sec 1-->
 <div id="cont" class="text-white p-8 my-12" >
@@ -49,24 +70,24 @@
     </div>
     <div class="grid grid-cols-2 gap-6 text-left max-w-4xl mx-auto">
       <div>
-        <h2 class="text-xl font-bold ">FAQs</h2>
+        <h2 class="text-3xl font-bold ">FAQs</h2>
         <p class="text-gray-600 mb-5">Look through our Frequently Asked Questions to find the info you need.</p>
-        <a href="#" class="text-white font-bold bg-[#AA54A0] rounded-full py-2 px-6">Visit FAQs</a>
+        <a href="#" class="text-white ">Visit FAQs</a>
       </div>
       <div>
-        <h2 class="text-xl font-bold">Call Us</h2>
+        <h2 class="text-3xl font-bold">Call Us</h2>
         <p class="text-gray-600 mb-5">If you'd like to talk to us in person, you can call us at 877-958-9626.</p>
-        <a href="#" class="text-white font-bold bg-[#AA54A0] rounded-full py-2 px-6">Call Us</a>
+        <a href="#" class="text-white ">+252 61* *** ***</a>
       </div>
       <div>
-        <h2 class="text-xl font-bold">Chat Us</h2>
+        <h2 class="text-3xl font-bold">Chat Us</h2>
         <p class="text-gray-600 mb-5">Got a question you need answered right away? We're here for that.</p>
-        <a href="#" class="text-white font-bold bg-[#AA54A0] rounded-full py-2 px-6">Chat Now</a>
+        <a href="#" class="text-white ">facebook: QalinCodes</a>
       </div>
       <div>
-        <h2 class="text-xl font-bold">Email</h2>
+        <h2 class="text-3xl font-bold">Email</h2>
         <p class="text-gray-600 mb-5">You can simply send us an email. Our support staff will get back to you ASAP.</p>
-        <a href="#" class="text-white font-bold bg-[#AA54A0] rounded-full py-2 px-6">Email Us</a>
+        <a href="#" class="text-white ">QalinCodes@gmail.com</a>
       </div>
     </div>
   </div>
