--- a/contact.html
+++ b/contact.html
@@ -36,10 +36,10 @@
   </ul>
 
   <a 
-    href="login.html" 
+    href="register.html" 
     class="btn btn-primary rounded-full py-2 md:py-3 px-5 md:px-6 bg-[#AA54A0] text-white"
   >
-    Sign Up
+  register
   </a>
 </nav>
 
