--- a/forum.html
+++ b/forum.html
@@ -35,10 +35,10 @@
   </ul>
 
   <a 
-    href="login.html" 
+    href="register.html" 
     class="btn btn-primary rounded-full py-2 md:py-3 px-5 md:px-6 bg-[#AA54A0] text-white"
   >
-    Sign Up
+  register
   </a>
 </nav>
 
@@ -62,9 +62,9 @@
     <h2 class="text-xl font-semibold text-white">Payment information</h2>
     <p class="text-gray-600 text-sm mb-4">All transactions are secure and encrypted.</p>
 
-    <div class="flex gap-2 mb-4 bg-[#0F112B] rounded-full py-2 justify-center">
+    <div class="flex gap-2 mb-4 bg-white rounded-full py-2 justify-center">
       <img src="google.png" class="w-[40px] px-2">
-      <h2 class="font-medium capitalize text-white">Google pay</h2>
+      <h2 class="font-medium capitalize text-black">Google pay</h2>
       
     </div>
 
