--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
   </ul>
 
   <a 
-    href="login.html" 
+    href="register.html" 
     class="btn btn-primary rounded-full py-2 md:py-3 px-5 md:px-6 bg-[#AA54A0] text-white"
   >
-    Sign Up
+  register
   </a>
 </nav>
 
@@ -90,12 +90,13 @@
           alt="Python Course"
         />
         <div class="p-4">
-          <h3 class="text-lg font-semibold mb-2 text-white">
+          <h3 class="text-lg font-semibold mb-3 text-white">
             100 Days of Code: The Complete Python Pro Bootcamp
           </h3>
           <p class="text-md text-[#AA54A0] mb-2">
             ENG Abdirizak, Developer and Lead Instructor
           </p>
+          
           <p class="text-[#AA54A0] font-bold mb-4">
             4.7 <span class="text-white">(348,483)</span>
           </p>
